# extract_map

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: doc_examples.rs  entry.rs  lib.rs  mut_guard.rs  serde.rs  typesize.rs  value_wrapper.rs  with_size_hint.rs
src/iter/: mod.rs  owned.rs  ref.rs  ref_mut.rs
tests/: iter_mut_for_each.rs
