[package]
name = "extract_map"
version = "0.1.2"
edition = "2021"
license = "MIT"
rust-version = "1.70"
categories = ["data-structures"]
keywords = ["hashmap", "hashset", "map", "memory", "optimised"]
repository = "https://github.com/GnomedDev/extract_map"
description = "A HashMap for memory efficent storage of value types which contain their own keys."

[dependencies]
typesize = { version = "0.1.9", optional = true, default-features = false }
gat-lending-iterator = { version = "0.1.5", optional = true }
serde = { version = "1.0.197", optional = true }

[features]
serde = ["dep:serde"]
typesize = ["dep:typesize"]
iter_mut = ["dep:gat-lending-iterator"]

[dev-dependencies]
serde_json = { version = "1.0.115" }
serde = { version = "1.0.197", features = ["derive"] }
